<resources>
    <string name="app_name">授权组件</string>
    <string name="title_activity_index">授权方式</string>
    <string name="title_activity_taobao">淘宝授权</string>
    <string name="title_activity_verify_success">授权结果</string>
    <string name="loading_data">正在加载数据...</string>

    <string name="happyfi_reg_name">姓   名:</string>
    <string name="happyfi_reg_id_num">身份证号码:</string>
    <string name="happyfi_reg_verify_code">验证码:</string>
    <string name="happyfi_reg_contract">我已阅读，并同意《服务协议》。</string>
    <string name="happyfi_login_name">请输入您在人行征信的登录名</string>
    <string name="happyfi_login_pw">请输入您在人行征信的登录密码</string>
    <string name="happyfi_pw">密码：</string>
    <string name="happyfi_login_login_btn">登录人行征信中心</string>
    <string name="happyfi_login_register_btn">首次开通人行征信中心账号</string>
    <string name="happyfi_reg_login_name">登录名:</string>
    <string name="happyfi_reg_login_pw_again">确认密码:</string>
    <string name="happyfi_reg_mail">电子邮箱:</string>
    <string name="happyfi_reg_mobile_no">手机号码:</string>
    <string name="happyfi_reg_mobile_verify_code">动态码:</string>
    <string name="happyfi_reg_submit">提  交</string>
    <string name="happyfi_reg_get_active_code">获取动态码</string>
    <string name="happyfi_register_next_step">下一步</string>
    <string name="happyfi_id_card_verify_code">请输入人行征信中心发来的身份验证码:</string>
    <string name="happyfi_id_verify_tip">温馨提示：请确认您手机上已收到人行征信中心发来的身份验证码短信，且验证码在7天有效期内。如未收到，请耐心等待。如验证码已过期，请返回重新获取信用报告。</string>
    <string name="happyfi_next_verify_safe">下一步，安全验证</string>
    <string name="happyfi_tip_three">温馨提示，为保障您的信息安全，您申请的信息将于7天后过期，请及时获取查询结果。</string>
    <string name="happyfi_submit_success">您已提交成功</string>
    <string name="happyfi_upload_service">上传报告并返回</string>
    <string name="happyfi_upload_mobile">注册手机号:</string>
    <string name="happyfi_haved_identity_ver">您是否已经收到身份验证码</string>
    <string name="happyfi_haved_identity_ver_tip">温馨提示:请确认您手机上收到身份验证码，如未收到，请耐心等待。</string>
    <string name="happyfi_have_not_identity_ver_tip">抱歉，您提交的个人信用报告申请可能正在受理中。请在收到验证码后访问APP获取信用报告。请耐心等待。</string>
    <string name="happyfi_yes">是</string>
    <string name="happyfi_no">否</string>
    <string name="happyfi_reapply">我没有收到验证码，点此重新申请</string>
    <string name="happyfi_has_report_prompt">您的个人信用信息产品已存在，是否继续申请查询，如果继续现有的个人信用信息产品将不再保留!</string>
    <string name="happyfi_continue_str">继续</string>
    <string name="happyfi_login_name_hint">由6-16位数字和字母组成</string>
    <string name="happyfi_login_password_hint">由6-20位数字和字母组成</string>
    <string name="happyfi_pboc_submit_tip">       您的信用信息查询请求已提交，24小时内人行征信中心会发送身份验证码短信到您的手机上，请在收到身份验证码后重新登录APP并获取个人信用报告。身份验证不通过或验证码过期请重新申请。</string>
    <string name="happyfi_title_activity_login">个人信用报告查询</string>
    <string name="happyfi_system_error">系统错误，请重试...</string>
    <string name="happyfi_dialog_tip_title">提示</string>
    <string name="happyfi_pw_not_same">再次输入密码不一致</string>
    <string name="happyfi_name_not_null">注册名不能为空</string>
    <string name="happyfi_title_activity_login_to_answer">个人征信信息查询</string>
    <string name="happyfi_title_activity_get_pboc_pre_check">身份验证</string>
    <string name="happyfi_title_activity_view_pboc_content">上传征信记录</string>
    <string name="happyfi_not_find_user_info">没有收录该用户信息！</string>
    <string name="happyfi_message_have_sent">手机验证码已发送</string>
    <string name="happyfi_message_send_fail">手机验证码发送失败</string>
    <string name="happyfi_net_work_error">网络异常,请检查网络...</string>
    <string name="happyfi_login_error">用户名或者密码错误</string>
    <string name="happyfi_loading_data">正在加载数据...</string>
    <string name="happyfi_title_activity_complete_question">提交申请</string>
    <string name="happyfi_get_question_error">获取问题失败，请返回重试。</string>
    <string name="happyfi_answer_question_error">回答问题有错，请重新回答。</string>
    <string name="happyfi_info_error">填写信息有误，请核对信息</string>
    <string name="happyfi_pboc_check_code_over_time">身份验证码错误或者是否超出7天有效期</string>
    <string name="happyfi_over_seven_day">超过七天</string>
    <string name="happyfi_check_code_error">验证码错误</string>
    <string name="happyfi_upload_success_tip">上传成功!</string>
    <string name="happyfi_upload_fail_tip">上传失败,请重试!</string>
    <string name="happyfi_upload_conver_fail">上传转码失败，请返回重新获取</string>
    <string name="happyfi_user_exist">用户名已存在，请重新填写。</string>
    <string name="happyfi_get_pboc_content">上传PBOC信用报告</string>
    <string name="happyfi_post_pboc_html_over_time">登录状态已超时，请返登陆页面。</string>
    <string name="happyfi_get_pboc_content_fail">获取个人信用信息失败，请返回重新获取。</string>
    <string name="happyfi_register_title">首次开通人行征信中心账号</string>
    <string name="happyfi_happyfi">上海乐融</string>
    <string name="happyfi_tecnology">技术支持</string>
    <string name="happyfi_net_address">www.happyfi.com</string>
    <string name="happyfi__user_not_login">乐融账号已超时，请返回登录页面登录后再提交!</string>
</resources>
