<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/happyfi_font_common"
        android:text="@string/happyfi_haved_identity_ver" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dip"
        android:background="@drawable/happyfi_button_full"
        android:textColor="@color/happyfi_white"
        android:textSize="@dimen/happyfi_font_middle"
        android:text="@string/happyfi_yes"
        android:gravity="center"/>

    <Button
        android:id="@+id/btn_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/happyfi_activity_vertical_margin"
        android:background="@drawable/happyfi_button_full"
        android:textSize="@dimen/happyfi_font_middle"
        android:textColor="@color/happyfi_white"
        android:text="@string/happyfi_no"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:textSize="@dimen/happyfi_font_common"
        android:text="@string/happyfi_haved_identity_ver_tip" />

</LinearLayout>
