<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/happyfi_activity_vertical_margin"
    android:paddingLeft="@dimen/happyfi_activity_horizontal_margin"
    android:paddingRight="@dimen/happyfi_activity_horizontal_margin"
    android:paddingTop="@dimen/happyfi_activity_vertical_margin"
    tools:context="com.happyfi.allinfi.Activity.RegUserInfoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/happyfi_step_1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/happyfi_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/happyfi_pading"
            android:gravity="right"
            android:text="@string/happyfi_reg_name"
            android:textSize="@dimen/happyfi_font_middle" />

        <EditText
            android:id="@+id/reg_name_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true" />
    </LinearLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal"-->
    <!--android:weightSum="1">-->
    <!--<TextView-->
    <!--android:layout_width="@dimen/title_length"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/reg_id_type"-->
    <!--android:gravity="right"/>-->
    <!--<Spinner-->
    <!--android:id="@+id/reg_id_type_value"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="24dp"-->
    <!--android:layout_weight="1"/>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/happyfi_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/happyfi_pading"
            android:gravity="right"
            android:text="@string/happyfi_reg_id_num"
            android:textSize="@dimen/happyfi_font_middle" />

        <EditText
            android:id="@+id/reg_id_num_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/happyfi_divider"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/happyfi_pading"
            android:gravity="right"
            android:text="@string/happyfi_reg_verify_code"
            android:textSize="@dimen/happyfi_font_middle" />

        <EditText
            android:id="@+id/reg_verify_code_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/reg_verify_code_source"
            android:layout_width="100dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/happyfi_standardX2"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/reg_agree_proxy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/happyfi_pading"
            android:layout_marginLeft="60dp"
            android:text="@string/happyfi_reg_contract"
            android:visibility="gone" />

        <Button
            android:id="@+id/reg_next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/happyfi_button_full"
            android:text="@string/happyfi_register_next_step"
            android:textColor="@color/happyfi_white"
            android:textSize="@dimen/happyfi_font_larger" />
    </LinearLayout>
</LinearLayout>
